--- a/package.json
+++ b/package.json
@@ -86,6 +86,8 @@
     "lint": "npm run eslint && npm run lesshint",
     "eslint": "eslint components/basic/Tag/**.js",
     "lesshint": "lesshint components -r scripts/lesshint-report.js",
-    "deploy": "babel components --out-dir lib"
+    "compile": "babel components --out-dir lib",
+    "demo": "cd demo | node ./demo/index.js --harmony",
+    "init": "cnpm i && cd demo && cnpm i"
   }
 }
