--- a/demo/package.json
+++ b/demo/package.json
@@ -24,7 +24,7 @@
     "q": "^1.4.1",
     "react-transform-hmr": "^1.0.4",
     "serve-static": "^1.11.1",
-    "webpack": "^1.13.3",
+    "webpack": "1.13.3",
     "webpack-dev-middleware": "^1.8.4",
     "webpack-hot-middleware": "^2.13.2"
   }
