--- a/package.json
+++ b/package.json
@@ -19,10 +19,10 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/yxlichun/FiveSixUI.git"
+    "url": "https://github.com/wl-fe/FiveSixUI.git"
   },
   "bugs": {
-    "url": "https://github.com/yxlichun/FiveSixUI/issues"
+    "url": "https://github.com/wl-fe/FiveSixUI/issues"
   },
   "main": "./lib/index.js",
   "files": [
@@ -79,7 +79,7 @@
     "sinon": "^1.17.6",
     "style-loader": "^0.13.1",
     "symbol-tree": "^3.1.4",
-    "webpack": "^1.13.3"
+    "webpack": "1.13.3"
   },
   "scripts": {
     "test": "mocha --compilers js:babel-core/register --require ./tests/index.js --require ignore-styles \"./tests/**/*.test.js\"",
@@ -87,7 +87,7 @@
     "eslint": "eslint components/basic/Tag/**.js",
     "lesshint": "lesshint components -r scripts/lesshint-report.js",
     "compile": "babel components --out-dir lib",
-    "demo": "cd demo | node ./demo/index.js --harmony",
-    "init": "cnpm i && cd demo && cnpm i"
+    "demo": "cd demo && node ./index.js --harmony",
+    "init": "rm -rf node_modules && cnpm i && cd demo && rm -rf node_modules  && cnpm i"
   }
 }
