--- a/package.json
+++ b/package.json
@@ -30,14 +30,14 @@
   ],
   "license": "MIT",
   "dependencies": {
-    "antd": "^2.5.1",
+    "antd": "~2.5.1",
     "jquery": "^3.1.1",
     "lodash": "^4.17.2",
-    "moment": "~2.15.1",
+    "moment": "~2.17.0",
     "react-addons-pure-render-mixin": "^15.4.1"
   },
   "devDependencies": {
-    "babel": "^6.5.2",
+    "babel": "~6.5.2",
     "babel-cli": "^6.18.0",
     "babel-core": "^6.18.2",
     "babel-eslint": "^7.1.1",
@@ -67,19 +67,19 @@
     "ignore-styles": "^5.0.1",
     "is-subset": "^0.1.1",
     "jsdom": "^9.8.3",
-    "less": "^2.7.1",
+    "less": "~2.7.1",
     "less-loader": "^2.2.3",
     "matchmedia-polyfill": "^0.3.0",
     "mocha": "^3.2.0",
-    "react": "^15.3.2",
+    "react": "~15.3.2",
     "react-addons-test-utils": "^15.4.1",
-    "react-dom": "^15.3.2",
+    "react-dom": "~15.3.2",
     "react-hot-loader": "^1.3.1",
     "react-transform-hmr": "^1.0.4",
     "sinon": "^1.17.6",
     "style-loader": "^0.13.1",
     "symbol-tree": "^3.1.4",
-    "webpack": "1.13.3"
+    "webpack": "~1.13.3"
   },
   "scripts": {
     "test": "mocha --compilers js:babel-core/register --require ./tests/index.js --require ignore-styles \"./tests/**/*.test.js\"",
