--- a/package.json
+++ b/package.json
@@ -34,10 +34,10 @@
     "jquery": "^3.1.1",
     "lodash": "^4.17.2",
     "moment": "~2.17.0",
-    "react-addons-pure-render-mixin": "^15.4.1"
+    "react-addons-pure-render-mixin": "~15.4.1"
   },
   "devDependencies": {
-    "babel": "~6.5.2",
+    "babel": "^6.5.2",
     "babel-cli": "^6.18.0",
     "babel-core": "^6.18.2",
     "babel-eslint": "^7.1.1",
@@ -71,9 +71,9 @@
     "less-loader": "^2.2.3",
     "matchmedia-polyfill": "^0.3.0",
     "mocha": "^3.2.0",
-    "react": "~15.3.2",
-    "react-addons-test-utils": "^15.4.1",
-    "react-dom": "~15.3.2",
+    "react": "~15.4.1",
+    "react-addons-test-utils": "~15.4.1",
+    "react-dom": "~15.4.1",
     "react-hot-loader": "^1.3.1",
     "react-transform-hmr": "^1.0.4",
     "sinon": "^1.17.6",
