--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fivesix",
-  "version": "0.1.5",
+  "version": "0.1.6",
   "title": "FiveSixUI",
   "description": "An enterprise-class UI design language and React-based implementation",
   "keywords": [
@@ -86,7 +86,7 @@
     "lint": "npm run eslint && npm run lesshint",
     "eslint": "eslint components/basic/Tag/**.js",
     "lesshint": "lesshint components -r scripts/lesshint-report.js",
-    "compile": "babel components --out-dir lib",
+    "compile": "rm -rf lib && babel components --out-dir lib",
     "demo": "cd demo && node ./index.js --harmony",
     "init": "rm -rf node_modules && cnpm i && cd demo && rm -rf node_modules  && cnpm i"
   }
