--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "license": "MIT",
   "dependencies": {
     "antd": "~2.5.1",
+    "immutable": "^3.8.1",
     "jquery": "^3.1.1",
     "lodash": "^4.17.2",
     "moment": "~2.17.0",
