--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "moment": "~2.17.0",
     "react-addons-pure-render-mixin": "~15.4.1",
     "react-lazy-cache": "~3.0.1",
-    "react-lazy-load": "~3.0.10"
+    "react-lazy-load": "~3.0.10",
+    "warning": "^3.0.0"
   },
   "devDependencies": {
     "babel": "^6.5.2",
