--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "jquery": "^3.1.1",
     "lodash": "^4.17.2",
     "moment": "~2.17.0",
+    "react": "~15.4.1",
     "react-addons-pure-render-mixin": "~15.4.1",
     "react-lazy-cache": "~3.0.1",
     "react-lazy-load": "~3.0.10",
